--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ img {
       "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
       "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1rem;
-    padding: 14px 32px;
+    padding: 14px 24px;
     border: none;
     border-radius: 4px;
     text-transform: uppercase;
@@ -169,7 +169,7 @@ img {
     font-weight: 500;
     text-align: center;
     transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    border: none;
+    border: 2px solid var(--primary-color);
     cursor: pointer;
     position: relative;
     overflow: hidden;
